Minor alignment fix

--- a/src/app/main-layout/header/header.component.css
+++ b/src/app/main-layout/header/header.component.css
@@ -16,7 +16,7 @@
 
 .dropdown-menu {
     background-color: var(--primary-color) !important;
-    min-width: 12rem !important;
+    min-width: 11rem !important;
     border: none !important;
 }
 
